--- a/src/app/Loader/loader.component.scss
+++ b/src/app/Loader/loader.component.scss
@@ -1,3 +1,6 @@
+@import '~src/appTheme.scss';
+
+
 #loaderContainer{
     margin:0;
     position: absolute;
@@ -24,7 +27,7 @@
         display: inline-block;
         width: 100%;
         height: 100%;
-        background: #1279C0;
+        background: $color-blue-default;
         transform: scale(0);
         transform-origin: center center;
         animation: loader 1.25s infinite linear;
