--- a/src/app/Returns/main-returns/main-returns.component.scss
+++ b/src/app/Returns/main-returns/main-returns.component.scss
@@ -1,3 +1,6 @@
+@import '~src/appTheme.scss';  
+  
+  
   table {
     width: 100%;
   }
@@ -7,11 +10,11 @@
   }
   
   tr.example-element-row:not(.example-expanded-row):hover {
-    background: #f5f5f5;
+    background: $color-gallery;
   }
   
   tr.example-element-row:not(.example-expanded-row):active {
-    background: #efefef;
+    background: $color-gallery;
   }
   
   .example-element-row td {
