--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-loader></app-loader>
 <app-navigation-bar></app-navigation-bar>
 <router-outlet></router-outlet>
+<!--psuedo-footer-->
 <div style="height:20px; width:100%;"></div>
