--- a/src/app/internal-home-page/internal-home-dashboard/internal-home-dashboard.component.html
+++ b/src/app/internal-home-page/internal-home-dashboard/internal-home-dashboard.component.html
@@ -1,3 +1,9 @@
-<p>
-  internal-home-dashboard works!
-</p>
+  <div>
+  <mat-card>
+    <figure style="width: 100%;">
+      <img src="http://www.batikcompusoft.com/img/underconstruction.gif" width="100%">
+      <figcaption style="text-align: center;">Under Construction</figcaption>
+    </figure>
+    <img src="https://image.freepik.com/free-icon/graph_318-10306.jpg" width="100%">
+  </mat-card>
+</div>
