--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -652,4 +652,6 @@
 
 <app-toolbar></app-toolbar>
 
-<app-main-returns-toolbox></app-main-returns-toolbox>
+<app-main-returns-toolbox [client]="rowData[0].Client" ></app-main-returns-toolbox> 
+
+<!-- [startDate]="" [endDate]="" -->
