--- a/src/app/internal-home-page/internal-home-page.component.html
+++ b/src/app/internal-home-page/internal-home-page.component.html
@@ -1,10 +1,10 @@
 <app-toolbar></app-toolbar>
 <div class="row" [ngClass]="{
-    'fullPage': this._g.cwWidth >= 992
+    'fullPage': this._g.cwWidth >= size_md
 }">
     <div [ngClass]="{
-        'col-8': this._g.cwWidth >= 992,
-        'col-12': this._g.cwWidth < 992
+        'col-8': this._g.cwWidth >= size_md,
+        'col-12': this._g.cwWidth < size_md
     }">
         <mat-card>
             <mat-tab-group (selectedTabChange)="GetArchived($event)" color="accent">
@@ -47,8 +47,8 @@
 
 
     <!-- Dashboard in page form-->
-    <div *ngIf="this._g.cwWidth >=992" [ngClass]="{
-    'col-4': this._g.cwWidth >= 992    
+    <div *ngIf="this._g.cwWidth >=size_md" [ngClass]="{
+    'col-4': this._g.cwWidth >= size_md    
     }">
         <app-internal-home-dashboard></app-internal-home-dashboard>
     </div>
@@ -56,7 +56,7 @@
 
 
     <!-- Dashboard in toolbox form-->
-    <ng-container *ngIf="this._g.cwWidth < 992">
+    <ng-container *ngIf="this._g.cwWidth < size_md">
         <button title="Tools" (click)="toggle(1)" id="toolboxBtn" class="btn toolboxButtonCollection" [ngClass]="{
             'btnShifted': toolsOpened,
             'hidden': hide
