--- a/src/app/Returns/Toolbox-and-L2/main-returns-toolbox/main-returns-toolbox.component.html
+++ b/src/app/Returns/Toolbox-and-L2/main-returns-toolbox/main-returns-toolbox.component.html
@@ -33,7 +33,8 @@
       </p>
       <p>Insert expand/collapse all buttons here?</p>
       <p>Insert temproary exclude toggle button here</p>
-      <p><button mat-raised-button color="primary">Apply Changes</button></p>
+      <button (Click)='ApplyChanges()'>Test</button>
+      <!-- mat-raised-button color="primary" -->
     </div>
   </div>
 
