--- a/src/app/internal-home-page/internal-home-page.component.html
+++ b/src/app/internal-home-page/internal-home-page.component.html
@@ -11,16 +11,18 @@
                 <mat-tab label="Active">
                     <div class='dictionaryContent'>
                         <ul class='dictionary'>
-                            <li *ngFor="let client of ClientArr" class="clientNameLI"><a routerLink='/returns/{{client?.gClientAcronym}}/0101{{ currentYear }}/1231{{ currentYear }}'>{{
-                                    client?.gClientName }}</a></li>
+                            <li *ngFor="let client of ClientArr" class="clientNameLI" (click)="NavigateToReturns(client?.gClientAcronym, currentYear, currentYear)"> {{ client.gClientName }}
+                                <!-- <a routerLink='/returns/{{client?.gClientAcronym}}/0101{{ currentYear }}/1231{{ currentYear }}'>{{ client?.gClientName }}</a> -->
+                                    </li>
                         </ul>
                     </div>
                 </mat-tab>
                 <mat-tab label="Archived">
                     <div class='dictionaryContent'>
                         <ul class='dictionary'>
-                            <li *ngFor="let client of ClientArr" class="clientNameLI"><a routerLink='/returns/{{client?.gClientAcronym}}/01012000/1231{{ currentYear }}'>{{
-                                    client?.gClientName }}</a></li>
+                                <li *ngFor="let client of ClientArr" class="clientNameLI" (click)="NavigateToReturns(client?.gClientAcronym, 2000, currentYear)"> {{ client.gClientName }} </li>
+                                        <!-- <li *ngFor="let client of ClientArr" class="clientNameLI"><a routerLink='/returns/{{client?.gClientAcronym}}/01012000/1231{{ currentYear }}'>{{
+                                    client?.gClientName }}</a></li> -->
                         </ul>
                     </div>
                 </mat-tab>
@@ -36,8 +38,9 @@
                     </ng-template>
                     <div class='dictionaryContent'>
                         <ul class='dictionary'>
-                            <li *ngFor="let client of ClientArr" class="clientNameLI"><a routerLink='/returns/{{client?.gClientAcronym}}/0101{{ selectedYear }}/1231{{ selectedYear }}'>{{
-                                    client?.gClientName }}</a></li>
+                                <li *ngFor="let client of ClientArr" class="clientNameLI" (click)="NavigateToReturns(client?.gClientAcronym, selectedYear, selectedYear)"> {{ client.gClientName }} </li>
+                                        <!-- <li *ngFor="let client of ClientArr" class="clientNameLI"><a routerLink='/returns/{{client?.gClientAcronym}}/0101{{ selectedYear }}/1231{{ selectedYear }}'>{{
+                                    client?.gClientName }}</a></li> -->
                         </ul>
                     </div>
                 </mat-tab>
